--- a/src/sections/contact/index.css
+++ b/src/sections/contact/index.css
@@ -1,3 +1,45 @@
 .contact {
-  height: 30rem;
+  padding: 9rem 0;
+
+  & .container {
+    max-width: 111rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  & .form-row {
+    display: flex;
+    justify-content: space-between;
+    margin: 2.4rem 0;
+    & input {
+      margin: 0;
+    }
+  }
+
+  & .content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 2.4rem;
+    max-width: 44.4rem;
+    & .contact-text {
+      margin: 4rem 0;
+    }
+  }
+
+  & .submit-btn {
+    background-color: #ed4c5c;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 1.7rem 3.4rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  & .submit-btn:hover {
+    background-color: #d63d4e;
+  }
 }
